# icloud-mcp

./: .gitignore  README.md  auth.py  pyproject.toml  server.py
.claude/: settings.local.json
tools/: calendar.py  mail.py  reminders.py
